tests/parser/switch/invalid_break.m.out
In invalid_break.m, line 6
|       break;
|       ^^^^^ error: expected for|if|global|while|return, found break instead
MISS_HIT Summary: 1 file(s) analysed, 1 error(s)
